* ChangeLog: Follow spelling conventions. 	* ChangeLog.0: Likewise. 	* com.c: Likewise. 	* ffe.texi: Likewise. 	* g77.texi: Likewise. 	* intdoc.in: Likewise. 	* invoke.texi: Likewise. 	* news.texi: Likewise. 	* intdoc.texi: Regenerate.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57433 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/intdoc.in
+++ b/gcc/f/intdoc.in
@@ -1617,7 +1617,7 @@ Existence
 DEFDOC (CHDIR_subr, "Change directory.", "\
 Sets the current working directory to be @var{@1@}.
 If the @var{@2@} argument is supplied, it contains 0
-on success or a non-zero error code otherwise upon return.
+on success or a nonzero error code otherwise upon return.
 See @code{chdir(3)}.
 
 @emph{Caution:} Using this routine during I/O to a unit connected with a
@@ -1631,7 +1631,7 @@ only a function, not as a subroutine, or do not support the
 
 DEFDOC (CHDIR_func, "Change directory.", "\
 Sets the current working directory to be @var{@1@}.
-Returns 0 on success or a non-zero error code.
+Returns 0 on success or a nonzero error code.
 See @code{chdir(3)}.
 
 @emph{Caution:} Using this routine during I/O to a unit connected with a
@@ -1652,7 +1652,7 @@ trailing blanks in @var{@1@} are ignored.
 Currently, @var{@1@} must not contain the single quote
 character.
 
-Returns 0 on success or a non-zero error code otherwise.
+Returns 0 on success or a nonzero error code otherwise.
 
 Note that this currently works
 by actually invoking @code{/bin/chmod} (or the @code{chmod} found when
@@ -1674,7 +1674,7 @@ Currently, @var{@1@} must not contain the single quote
 character.
 
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return.
+0 on success or a nonzero error code upon return.
 
 Note that this currently works
 by actually invoking @code{/bin/chmod} (or the @code{chmod} found when
@@ -1689,7 +1689,7 @@ only a function, not as a subroutine, or do not support the
 DEFDOC (GETCWD_func, "Get current working directory.", "\
 Places the current working directory in @var{@1@}.
 Returns 0 on
-success, otherwise a non-zero error code
+success, otherwise a nonzero error code
 (@code{ENOSYS} if the system does not provide @code{getcwd(3)}
 or @code{getwd(3)}).
 ")
@@ -1697,7 +1697,7 @@ or @code{getwd(3)}).
 DEFDOC (GETCWD_subr, "Get current working directory.", "\
 Places the current working directory in @var{@1@}.
 If the @var{@2@} argument is supplied, it contains 0
-success or a non-zero error code upon return
+success or a nonzero error code upon return
 (@code{ENOSYS} if the system does not provide @code{getcwd(3)}
 or @code{getwd(3)}).
 
@@ -1758,7 +1758,7 @@ Number of blocks allocated (-1 if not available)
 Not all these elements are relevant on all systems.
 If an element is not relevant, it is returned as 0.
 
-Returns 0 on success or a non-zero error code.
+Returns 0 on success or a nonzero error code.
 ")
 
 DEFDOC (FSTAT_subr, "Get file information.", "\
@@ -1814,7 +1814,7 @@ Not all these elements are relevant on all systems.
 If an element is not relevant, it is returned as 0.
 
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return.
+0 on success or a nonzero error code upon return.
 
 Some non-GNU implementations of Fortran provide this intrinsic as
 only a function, not as a subroutine, or do not support the
@@ -1878,7 +1878,7 @@ Number of blocks allocated (-1 if not available)
 Not all these elements are relevant on all systems.
 If an element is not relevant, it is returned as 0.
 
-Returns 0 on success or a non-zero error code
+Returns 0 on success or a nonzero error code
 (@code{ENOSYS} if the system does not provide @code{lstat(2)}).
 ")
 
@@ -1940,7 +1940,7 @@ Not all these elements are relevant on all systems.
 If an element is not relevant, it is returned as 0.
 
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return
+0 on success or a nonzero error code upon return
 (@code{ENOSYS} if the system does not provide @code{lstat(2)}).
 
 Some non-GNU implementations of Fortran provide this intrinsic as
@@ -2002,7 +2002,7 @@ Number of blocks allocated (-1 if not available)
 Not all these elements are relevant on all systems.
 If an element is not relevant, it is returned as 0.
 
-Returns 0 on success or a non-zero error code.
+Returns 0 on success or a nonzero error code.
 ")
 
 DEFDOC (STAT_subr, "Get file information.", "\
@@ -2060,7 +2060,7 @@ Not all these elements are relevant on all systems.
 If an element is not relevant, it is returned as 0.
 
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return.
+0 on success or a nonzero error code upon return.
 
 Some non-GNU implementations of Fortran provide this intrinsic as
 only a function, not as a subroutine, or do not support the
@@ -2073,7 +2073,7 @@ A null character (@samp{CHAR(0)}) marks the end of
 the names in @var{@1@} and @var{@2@}---otherwise,
 trailing blanks in @var{@1@} and @var{@2@} are ignored.
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return.
+0 on success or a nonzero error code upon return.
 See @code{link(2)}.
 
 Some non-GNU implementations of Fortran provide this intrinsic as
@@ -2086,7 +2086,7 @@ Makes a (hard) link from file @var{@1@} to @var{@2@}.
 A null character (@samp{CHAR(0)}) marks the end of
 the names in @var{@1@} and @var{@2@}---otherwise,
 trailing blanks in @var{@1@} and @var{@2@} are ignored.
-Returns 0 on success or a non-zero error code.
+Returns 0 on success or a nonzero error code.
 See @code{link(2)}.
 
 Due to the side effects performed by this intrinsic, the function
@@ -2099,7 +2099,7 @@ A null character (@samp{CHAR(0)}) marks the end of
 the names in @var{@1@} and @var{@2@}---otherwise,
 trailing blanks in @var{@1@} and @var{@2@} are ignored.
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return
+0 on success or a nonzero error code upon return
 (@code{ENOSYS} if the system does not provide @code{symlink(2)}).
 
 Some non-GNU implementations of Fortran provide this intrinsic as
@@ -2112,7 +2112,7 @@ Makes a symbolic link from file @var{@1@} to @var{@2@}.
 A null character (@samp{CHAR(0)}) marks the end of
 the names in @var{@1@} and @var{@2@}---otherwise,
 trailing blanks in @var{@1@} and @var{@2@} are ignored.
-Returns 0 on success or a non-zero error code
+Returns 0 on success or a nonzero error code
 (@code{ENOSYS} if the system does not provide @code{symlink(2)}).
 
 Due to the side effects performed by this intrinsic, the function
@@ -2126,7 +2126,7 @@ the names in @var{@1@} and @var{@2@}---otherwise,
 trailing blanks in @var{@1@} and @var{@2@} are ignored.
 See @code{rename(2)}.
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return.
+0 on success or a nonzero error code upon return.
 
 Some non-GNU implementations of Fortran provide this intrinsic as
 only a function, not as a subroutine, or do not support the
@@ -2139,7 +2139,7 @@ A null character (@samp{CHAR(0)}) marks the end of
 the names in @var{@1@} and @var{@2@}---otherwise,
 trailing blanks in @var{@1@} and @var{@2@} are ignored.
 See @code{rename(2)}.
-Returns 0 on success or a non-zero error code.
+Returns 0 on success or a nonzero error code.
 
 Due to the side effects performed by this intrinsic, the function
 form is not recommended.
@@ -2168,7 +2168,7 @@ A null character (@samp{CHAR(0)}) marks the end of
 the name in @var{@1@}---otherwise,
 trailing blanks in @var{@1@} are ignored.
 If the @var{@2@} argument is supplied, it contains
-0 on success or a non-zero error code upon return.
+0 on success or a nonzero error code upon return.
 See @code{unlink(2)}.
 
 Some non-GNU implementations of Fortran provide this intrinsic as
@@ -2181,7 +2181,7 @@ Unlink the file @var{@1@}.
 A null character (@samp{CHAR(0)}) marks the end of
 the name in @var{@1@}---otherwise,
 trailing blanks in @var{@1@} are ignored.
-Returns 0 on success or a non-zero error code.
+Returns 0 on success or a nonzero error code.
 See @code{unlink(2)}.
 
 Due to the side effects performed by this intrinsic, the function
@@ -2238,7 +2238,7 @@ in @var{@1@}.
 
 DEFDOC (HOSTNM_func, "Get host name.", "\
 Fills @var{@1@} with the system's host name returned by
-@code{gethostname(2)}, returning 0 on success or a non-zero error code
+@code{gethostname(2)}, returning 0 on success or a nonzero error code
 (@code{ENOSYS} if the system does not provide @code{gethostname(2)}).
 
 On some systems (specifically SCO) it might be necessary to link the
@@ -2251,7 +2251,7 @@ DEFDOC (HOSTNM_subr, "Get host name.", "\
 Fills @var{@1@} with the system's host name returned by
 @code{gethostname(2)}.
 If the @var{@2@} argument is supplied, it contains
-0 on success or a non-zero error code upon return
+0 on success or a nonzero error code upon return
 (@code{ENOSYS} if the system does not provide @code{gethostname(2)}).
 
 Some non-GNU implementations of Fortran provide this intrinsic as
@@ -2513,7 +2513,7 @@ allowing you to take appropriate action.
 
 DEFDOC (KILL_func, "Signal a process.", "\
 Sends the signal specified by @var{@2@} to the process @var{@1@}.
-Returns 0 on success or a non-zero error code.
+Returns 0 on success or a nonzero error code.
 See @code{kill(2)}.
 
 Due to the side effects performed by this intrinsic, the function
@@ -2523,7 +2523,7 @@ form is not recommended.
 DEFDOC (KILL_subr, "Signal a process.", "\
 Sends the signal specified by @var{@2@} to the process @var{@1@}.
 If the @var{@3@} argument is supplied, it contains
-0 on success or a non-zero error code upon return.
+0 on success or a nonzero error code upon return.
 See @code{kill(2)}.
 
 Some non-GNU implementations of Fortran provide this intrinsic as
