maintainer-scripts: 	* update_version: Do not check in files which are unchanged. 	* gcc_release: Only update the version in gcc/version.c. gcc: 	* version.c (version_string): Now const char[]. 	* version.h: Update to match. gcc/ada: 	* Make-lang.in (EXTRA_GNATBIND_OBJS): Add version.o. 	* Makefile.in (TOOLS_LIBS): Add ../../version.o. 	* gnatvsn.ads: Gnat_Version_String is now a function. 	* gnatvsn.adb: New file.  When asked for Gnat_Version_String, 	copy the C version_string into a String and return it. 	* gnatcmd.adb, gnatkr.adb, gnatlbr.adb, gnatlink.adb, 	gnatls.adb,gnatmake.adb, gnatprep.adb, gnatpsta.adb: 	Remove pragma Ident (Gnat_Version_String).  If this was the 	sole use of package Gnatvsn, remove the with statement too. 	* gnat1drv.adb: Tweak -gnatv output. gcc/f: 	* Make-lang.in (g77spec.o): Don't depend on f/version.h. 	(f/parse.o): Depend on version.h not f/version.h. 	(g77version.o, f/version.o): Delete all references.
	* com.c (ffecom_init_0): Fix transposed array indices in bsearch test.
	* g77spec.c: Don't include f/version.h or refer to ffe_version_string.
	* parse.c: Use version_string, not ffe_version_string.
	* version.c, version.h: Delete files.
libf2c:
	* libF77/Version.c: Rename junk to __LIBF77_VERSION__.  Add
	external decls for __LIBI77_VERSION__ and __LIBU77_VERSION__.
	Delete __G77_LIBF77_VERSION__
	(g77__fvers__): Print all three __LIB*77_VERSION__ strings,
	and __VERSION__ if we have it; nothing else.

	* libI77/Version.c: Provide only __LIBI77_VERSION__ (formerly junk).
	* libU77/Version.c: Provide only __LIBU77_VERSION__ (formerly junk).


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57461 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -248,8 +248,8 @@ LIBIBERTY = ../../libiberty/libiberty.a
 # and the system's installed libraries.
 LIBS = $(INTLLIBS) $(LIBIBERTY) $(SYSLIBS)
 LIBDEPS = $(INTLDEPS) $(LIBIBERTY)
-TOOLS_LIBS = ../../prefix.o $(LIBGNAT) ../../../libiberty/libiberty.a \
-	$(SYSLIBS)
+TOOLS_LIBS = ../../prefix.o ../../version.o $(LIBGNAT) \
+	../../../libiberty/libiberty.a $(SYSLIBS)
 
 # Specify the directories to be searched for header files.
 # Both . and srcdir are used, in that order,
