--- a/gcc/ada/Make-lang.in
+++ b/gcc/ada/Make-lang.in
@@ -181,7 +181,7 @@ GNATBIND_OBJS = \
 
 # List of extra object files linked in with various programs.
 EXTRA_GNAT1_OBJS = prefix.o
-EXTRA_GNATBIND_OBJS = prefix.o
+EXTRA_GNATBIND_OBJS = prefix.o version.o
 
 # FIXME: handle with configure substitutions
 #ifeq ($(strip $(filter-out alpha% dec vms% openvms% alphavms%,$(host))),)
