AbstractSelectableChannel.java: New file.
2002-09-25  Michael Koch  <konqueror@gmx.de>

	* java/nio/channels/spi/AbstractSelectableChannel.java: New file.
	* java/nio/channels/DatagramChannel.java:
	extends AbstractSelectableChannel
	* java/nio/channels/ServerSocketChannel.java:
	extends AbstractSelectableChannel
	* java/nio/channels/SocketChannel.java:
	extends AbstractSelectableChannel
	* Makefile.am (ordinary_java_source_files):
	java/nio/channels/spi/AbstractSelectableChannel.java added.
	* Makefile.in: Regenerated.

	This commit fixes the CVS build problems, Sorry for the trouble.

From-SVN: r57497

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -1927,6 +1927,7 @@ java/nio/channels/DatagramChannel.java \
 java/nio/channels/IllegalBlockingModeException.java \
 java/nio/channels/ServerSocketChannel.java \
 java/nio/channels/SocketChannel.java \
+java/nio/channels/spi/AbstractSelectableChannel.java \
 java/security/AccessControlContext.java \
 java/security/AccessControlException.java \
 java/security/AccessController.java \
