Makefile.in (qmtest-g++): Fix file name.
2002-09-26  Janis Johnson  <janis187@us.ibm.com>

	* Makefile.in (qmtest-g++): Fix file name.

From-SVN: r57547

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -3244,7 +3244,7 @@ ${QMTEST_DIR}/context: stamp-qmtest
 # Run the G++ testsuite using QMTest.
 qmtest-g++: ${QMTEST_DIR}/context ${QMTEST_DIR}/gpp-expected.qmr
 	cd ${QMTEST_DIR} && ${QMTEST} run ${QMTESTRUNFLAGS} -C context \
-	   -o gpp.qmr -O ${QMTEST_DIR}/gpp-expected.qmr \
+	   -o gpp.qmr -O gpp-expected.qmr \
 	   ${QMTEST_GPP_TESTS}
 
 # Use the QMTest GUI.
